# DRAG

./: .gitignore  README.md  pyproject.toml  tutorial.md
agentic-retrieval-finetuning/: evaluate.py  finetune.py  format_training_data.py  inference_test.py  process_trajectories.py  search_engine.py  trajectory_collector.py  utils.py
